Собрал проект, поправил тесты postman